--- a/index.html
+++ b/index.html
@@ -5,14 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="./index.js"></script>
+    <script defer src="./index.js"></script>
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 
 <body>
     <h1>ROCK PAPER SCISSOR GAME</h1>
-    <!-- <label for="input">Player input:</label> -->
-    <!-- <input type="text" id="input" placeholder="Enter your choice (rock, paper, scissors)"> -->
+    <div class="container">
+        <div class="game">
+            <div class="player">
+                <h2>Player</h2>
+                <p class="score">score: </p>
+                <p id="player-choice">?</p>
+                <button id="rock">Rock</button>
+                <button id="paper">Paper</button>
+                <button id="scissors">Scissor</button>
+            </div>
+            <div class="computer">
+                <h2>Computer</h2>
+                <p class="score">score: </p>
+                <p id="computer-choice">?</p>
+            </div>
+        </div>
+        <div class="result">
+            <h2>Result: <span id="result-text"></span></h2>
+        </div>
 </body>
 
 </html>
